--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,29 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@600;700;800&display=swap"
         rel="stylesheet">
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- FontAwesome - Preload for faster icon loading -->
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    </noscript>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="preload" href="style.css" as="style">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
+
+    <!-- Preloader -->
+    <div class="preloader" id="preloader">
+        <div class="loader-content">
+            <div class="loader-logo">FH</div>
+            <div class="loader-bar"></div>
+        </div>
+    </div>
 
     <header class="header scrolled" id="header">
         <!-- Loaded via JS -->
@@ -68,16 +84,25 @@
                             <span class="dot"></span> Available for new projects
                         </div>
                     </div>
-                    <form class="contact-form" data-reveal>
+                    <form class="contact-form" name="contact" data-netlify="true" id="contact-form"
+                        action="https://formsubmit.co/syedfaizyabhussain07@gmail.com" method="POST" data-reveal>
                         <h3 style="margin-bottom: 2rem;">Send a Message</h3>
+
+                        <!-- Configuration for both backends -->
+                        <input type="hidden" name="form-name" value="contact"> <!-- Netlify -->
+                        <input type="hidden" name="_subject" value="New Portfolio Inquiry!"> <!-- FormSubmit -->
+                        <input type="hidden" name="_template" value="table"> <!-- FormSubmit -->
+                        <input type="hidden" name="_captcha" value="false"> <!-- FormSubmit -->
+                        <input type="hidden" name="_honey" style="display:none"> <!-- FormSubmit -->
+
                         <div class="form-group">
-                            <input type="text" placeholder="Your Name" required>
+                            <input type="text" name="name" placeholder="Your Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" placeholder="Your Email" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
-                            <select required
+                            <select name="service" required
                                 style="width: 100%; padding: 0.8rem 1rem; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 8px; color: var(--text-secondary); outline: none; margin-bottom: 1rem;">
                                 <option value="" disabled selected>Select Service</option>
                                 <option value="web-dev">Custom Web Development</option>
@@ -88,7 +113,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <select required
+                            <select name="budget" required
                                 style="width: 100%; padding: 0.8rem 1rem; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 8px; color: var(--text-secondary); outline: none; margin-bottom: 1rem;">
                                 <option value="" disabled selected>Estimated Budget</option>
                                 <option value="basic">
@@ -99,13 +124,15 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <input type="text" placeholder="Project Reference Link (Optional)">
+                            <input type="text" name="reference" placeholder="Project Reference Link (Optional)">
                         </div>
                         <div class="form-group">
-                            <input type="text" placeholder="Expected Timeline (e.g. 2 weeks, 1 month)" required>
+                            <input type="text" name="timeline" placeholder="Expected Timeline (e.g. 2 weeks, 1 month)"
+                                required>
                         </div>
                         <div class="form-group">
-                            <textarea rows="4" placeholder="Your Message / Project Details" required></textarea>
+                            <textarea name="message" rows="4" placeholder="Your Message / Project Details"
+                                required></textarea>
                         </div>
                         <div class="form-group" style="text-align: center;">
                             <button type="submit" class="btn btn-primary" style="padding: 1rem 3rem;">Send
@@ -119,15 +146,27 @@
         </section>
     </main>
 
-    <footer class="footer" id="footer">
-        <!-- Loaded via JS -->
-    </footer>
+    <!-- Thank You Modal -->
+    <div class="modal-overlay" id="thank-you-modal">
+        <div class="modal-content">
+            <div class="modal-icon">
+                <i class="fa-solid fa-check"></i>
+            </div>
+            <h2>Thank You!</h2>
+            <p>Your message has been sent successfully. I'll get back to you within 24 hours.</p>
+            <button class="btn close-modal" id="close-modal">Back to Portfolio</button>
+        </div>
+    </div>
 
     <style>
         /* Dropdown Styling */
         select {
             cursor: pointer;
             transition: all 0.3s ease;
+            appearance: none;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%239CA3AF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m6 9 6 6 6-6'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 1rem center;
         }
 
         select:focus {
@@ -143,7 +182,7 @@
     </style>
 
     <!-- JS -->
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
