--- a/resume.html
+++ b/resume.html
@@ -268,7 +268,7 @@
                     <div><i class="fa-solid fa-envelope"></i> syedfaizyabhussain07@gmail.com</div>
                     <div><i class="fa-solid fa-phone"></i> +92 3352811970</div>
                     <div><i class="fa-solid fa-location-dot"></i> Karachi, Pakistan</div>
-                    <div><i class="fa-solid fa-globe"></i> faizyab-hussain07.vercel.app</div>
+                    <div><i class="fa-solid fa-globe"></i> faizyab-hussain.vercel.app</div>
                 </div>
             </div>
 
