--- a/404.html
+++ b/404.html
@@ -5,128 +5,181 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Page Not Found | Faizyab Hussain</title>
+    <meta name="description"
+        content="The page you are looking for does not exist. Back to Faizyab Hussain's portfolio.">
+    <meta name="robots" content="noindex, follow">
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://faizyab-hussain.vercel.app/404.html">
+    <meta property="og:title" content="404 - Destination Unknown">
+    <meta property="og:description" content="Lost in space? Let's get you back to the portfolio.">
+    <meta property="og:image" content="https://faizyab-hussain.vercel.app/favicon.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="404 - Page Not Found">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@600;700;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Outfit:wght@600;700;800&display=swap"
         rel="stylesheet">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/png">
+
     <style>
-        .error-page {
-            height: 100vh;
+        .error-wrapper {
+            min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            text-align: center;
-            background: var(--bg-body);
+            padding: 2rem;
             position: relative;
             overflow: hidden;
+            background: #09090b;
         }
 
         .error-content {
-            z-index: 2;
+            position: relative;
+            z-index: 10;
+            text-align: center;
+            max-width: 600px;
         }
 
-        .error-code {
-            font-size: 15rem;
+        .error-404 {
+            font-size: clamp(8rem, 20vw, 15rem);
             font-weight: 900;
-            font-family: 'Outfit', sans-serif;
-            background: linear-gradient(135deg, var(--primary), var(--secondary-glow));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
             line-height: 1;
             margin-bottom: 1rem;
-            position: relative;
+            font-family: 'Outfit', sans-serif;
+            background: linear-gradient(to bottom, #fff 30%, #6366f1 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            filter: drop-shadow(0 0 50px rgba(99, 102, 241, 0.2));
+            animation: pulse 4s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+                filter: drop-shadow(0 0 50px rgba(99, 102, 241, 0.2));
+            }
+
+            50% {
+                transform: scale(1.05);
+                filter: drop-shadow(0 0 80px rgba(99, 102, 241, 0.4));
+            }
         }
 
         .error-title {
-            font-size: 2.5rem;
+            font-size: 2rem;
+            font-weight: 700;
+            color: white;
             margin-bottom: 1.5rem;
-            color: #fff;
+            letter-spacing: -0.02em;
         }
 
-        .error-text {
-            color: var(--text-secondary);
-            max-width: 500px;
-            margin: 0 auto 2.5rem;
+        .error-msg {
+            color: #71717a;
             font-size: 1.1rem;
+            line-height: 1.6;
+            margin-bottom: 3rem;
         }
 
-        .error-shapes {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: 1;
+        .back-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.75rem;
+            padding: 1.25rem 2.5rem;
+            background: white;
+            color: black;
+            border-radius: 100px;
+            font-weight: 600;
+            text-decoration: none;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 2px solid transparent;
         }
 
-        .circle {
+        .back-btn:hover {
+            background: transparent;
+            color: white;
+            border-color: rgba(255, 255, 255, 0.2);
+            transform: translateY(-4px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+        }
+
+        /* Ambient Orbs */
+        .orb {
             position: absolute;
             border-radius: 50%;
-            background: var(--primary);
             filter: blur(100px);
-            opacity: 0.1;
+            z-index: 1;
+            opacity: 0.15;
+            animation: float 20s infinite alternate;
         }
 
-        .circle-1 {
-            width: 400px;
-            height: 400px;
-            top: -100px;
+        .orb-1 {
+            width: 600px;
+            height: 600px;
+            background: #6366f1;
+            top: -200px;
             right: -100px;
         }
 
-        .circle-2 {
-            width: 300px;
-            height: 300px;
-            bottom: -50px;
-            left: -50px;
-            background: var(--secondary-glow);
+        .orb-2 {
+            width: 500px;
+            height: 500px;
+            background: #a855f7;
+            bottom: -100px;
+            left: -100px;
+            animation-delay: -5s;
         }
 
-        @media (max-width: 768px) {
-            .error-code {
-                font-size: 10rem;
+        @keyframes float {
+            0% {
+                transform: translate(0, 0);
             }
 
-            .error-title {
-                font-size: 2rem;
+            100% {
+                transform: translate(50px, 50px);
             }
         }
     </style>
 </head>
 
 <body>
-    <header class="header scrolled" id="header"></header>
+    <!-- Preloader -->
+    <div class="preloader" id="preloader">
+        <div class="loader-content">
+            <div class="loader-logo">FH</div>
+            <div class="loader-bar"></div>
+        </div>
+    </div>
 
-    <main>
-        <section class="error-page">
-            <div class="error-shapes">
-                <div class="circle circle-1"></div>
-                <div class="circle circle-2"></div>
-            </div>
+    <main class="error-wrapper">
+        <div class="orb orb-1"></div>
+        <div class="orb orb-2"></div>
 
-            <div class="container error-content">
-                <div class="error-code" data-reveal>404</div>
-                <h1 class="error-title" data-reveal>Oops! Page Not Found</h1>
-                <p class="error-text" data-reveal>
-                    The page you're looking for might have been removed, had its name changed, or is temporarily
-                    unavailable.
-                </p>
-                <div class="error-btns" data-reveal>
-                    <a href="index.html" class="btn btn-primary">Return Home</a>
-                    <a href="projects.html" class="btn btn-secondary">Explore Projects</a>
-                </div>
-            </div>
-        </section>
+        <div class="error-content" data-reveal>
+            <div class="error-404">404</div>
+            <h1 class="error-title">Destination Unknown</h1>
+            <p class="error-msg">
+                The page you're looking for has vanished into the digital void.
+                Let's get you back to familiar territory.
+            </p>
+            <a href="index.html" class="back-btn">
+                <i class="fas fa-arrow-left"></i>
+                Back to Portfolio
+            </a>
+        </div>
     </main>
-
-    <footer class="footer" id="footer"></footer>
 
     <script src="script.js"></script>
 </body>
