--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <span>Contact</span>
                         </a>
                         <div class="w-px h-6 bg-zinc-700 mx-2"></div>
-                        <a href="https://github.com/faizyab" target="_blank"
+                        <a href="https://github.com/faizyabhussain07" target="_blank"
                             class="w-9 h-9 rounded-lg hover:bg-zinc-800/50 flex items-center justify-center transition-all duration-300 hover:text-indigo-400">
                             <i class="fab fa-github"></i>
                         </a>
@@ -156,7 +156,7 @@
                             <span>Contact</span>
                         </a>
                         <div class="border-t border-zinc-700 pt-3 flex gap-3">
-                            <a href="https://github.com/faizyab" target="_blank"
+                            <a href="https://github.com/faizyabhussain07" target="_blank"
                                 class="flex-1 py-3 rounded-lg bg-zinc-800/50 hover:bg-zinc-700/50 flex items-center justify-center transition-all duration-300">
                                 <i class="fab fa-github"></i>
                             </a>
