feat: Update resume with new role and "ProdSpark" project, add banner assets, and refresh sitemap metadata.

--- a/index.html
+++ b/index.html
@@ -7,28 +7,34 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Faizyab Hussain | Full-Stack Developer & Vibe Coder</title>
+    <title>Faizyab Hussain | Full-Stack Developer & AI Solutions Architect</title>
     <meta name="description"
-        content="Faizyab Hussain is a Full-Stack Developer specializing in modern web interfaces, AI-powered tools, and scalable applications. View my portfolio and projects.">
+        content="Faizyab Hussain is a professional Full-Stack Developer and AI Specialist building modern, high-performance web applications and scalable digital solutions.">
     <meta name="keywords"
-        content="Faizyab Hussain, Full-Stack Developer, Web Development, React, Next.js, UI/UX Design, Portfolio, Freelance Developer, Pakistan">
+        content="Faizyab Hussain, Full-Stack Developer, Web Development, React, Next.js, UI/UX Design, Portfolio, AI Developer, Karachi, Pakistan, Freelance Developer">
     <meta name="author" content="Faizyab Hussain">
     <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#6366f1">
 
     <!-- OpenGraph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://faizyab-hussain.vercel.app/">
-    <meta property="og:title" content="Faizyab Hussain — Full-Stack Developer & Builder">
+    <meta property="og:site_name" content="Faizyab Hussain Portfolio">
+    <meta property="og:title" content="Faizyab Hussain | Full-Stack Developer & AI specialist">
     <meta property="og:description"
-        content="Full-Stack Developer building modern interfaces & AI-powered tools. Explore my projects and services.">
-    <meta property="og:image" content="https://faizyab-hussain.vercel.app/favicon.png">
+        content="Full-Stack Developer building modern interfaces & AI-powered tools with high performance and scalable architecture.">
+    <meta property="og:image" content="https://faizyab-hussain.vercel.app/banner-faizyabime.PNG">
+    <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://faizyab-hussain.vercel.app/">
-    <meta property="twitter:title" content="Faizyab Hussain — Builder">
-    <meta property="twitter:description" content="Full-Stack Developer building modern interfaces & AI-powered tools.">
-    <meta property="twitter:image" content="https://faizyab-hussain.vercel.app/favicon.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://faizyab-hussain.vercel.app/">
+    <meta name="twitter:title" content="Faizyab Hussain — Full-Stack Architect">
+    <meta name="twitter:description"
+        content="Expert Full-Stack Developer building modern interfaces & AI-powered tools.">
+    <meta name="twitter:image" content="https://faizyab-hussain.vercel.app/banner-faizyabime.PNG">
+    <meta name="twitter:site" content="@FaizyabHus74391">
+    <meta name="twitter:creator" content="@FaizyabHus74391">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://faizyab-hussain.vercel.app/">
@@ -210,6 +216,47 @@
                 </h2>
 
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- ProdSpark -->
+                    <div class="glass-card p-8 rounded-2xl">
+                        <div class="flex items-center gap-3 mb-4">
+                            <div class="w-12 h-12 bg-orange-600/20 rounded-lg flex items-center justify-center">
+                                <i class="fas fa-bolt text-orange-400 text-xl"></i>
+                            </div>
+                            <div>
+                                <div class="text-orange-400 text-xs font-medium uppercase tracking-wider">Feb 2026 —
+                                    Present</div>
+                                <h3 class="text-2xl font-bold">ProdSpark</h3>
+                            </div>
+                        </div>
+                        <p class="text-zinc-400 mb-4 leading-relaxed">A comprehensive platform to discover the best
+                            tools and products. Browse, submit, rate, and review innovative tools in a curated
+                            directory.</p>
+                        <a href="https://prodspark.vercel.app/" target="_blank"
+                            class="text-sm text-orange-400 font-medium hover:text-orange-300 transition-colors flex items-center gap-2">
+                            View Live <i class="fas fa-external-link-alt text-xs"></i>
+                        </a>
+                    </div>
+
+                    <!-- Web Template Hub -->
+                    <div class="glass-card p-8 rounded-2xl">
+                        <div class="flex items-center gap-3 mb-4">
+                            <div class="w-12 h-12 bg-emerald-600/20 rounded-lg flex items-center justify-center">
+                                <i class="fas fa-code text-emerald-400 text-xl"></i>
+                            </div>
+                            <div>
+                                <div class="text-emerald-400 text-xs font-medium uppercase tracking-wider">Jan 2026 —
+                                    Present</div>
+                                <h3 class="text-2xl font-bold">Web Template Hub</h3>
+                            </div>
+                        </div>
+                        <p class="text-zinc-400 mb-4 leading-relaxed">Curated collection of modern, responsive web
+                            templates. Ready-to-use designs for developers and businesses.</p>
+                        <a href="https://web-template-hub.netlify.app" target="_blank"
+                            class="text-sm text-emerald-400 font-medium hover:text-emerald-300 transition-colors flex items-center gap-2">
+                            View Live <i class="fas fa-external-link-alt text-xs"></i>
+                        </a>
+                    </div>
+
                     <!-- DevWeaveX -->
                     <div class="glass-card p-8 rounded-2xl">
                         <div class="flex items-center gap-3 mb-4">
@@ -225,26 +272,6 @@
                         <p class="text-zinc-400 mb-4 leading-relaxed">Leading a professional agency platform focused on
                             scalable architecture and premium UI/UX. Building systems that scale.</p>
                         <div class="text-sm text-indigo-400 font-medium">Founder & Lead Developer</div>
-                    </div>
-
-                    <!-- Web Template Hub -->
-                    <div class="glass-card p-8 rounded-2xl">
-                        <div class="flex items-center gap-3 mb-4">
-                            <div class="w-12 h-12 bg-emerald-600/20 rounded-lg flex items-center justify-center">
-                                <i class="fas fa-code text-emerald-400 text-xl"></i>
-                            </div>
-                            <div>
-                                <div class="text-emerald-400 text-xs font-medium uppercase tracking-wider">2025 —
-                                    Present</div>
-                                <h3 class="text-2xl font-bold">Web Template Hub</h3>
-                            </div>
-                        </div>
-                        <p class="text-zinc-400 mb-4 leading-relaxed">Curated collection of modern, responsive web
-                            templates. Ready-to-use designs for developers and businesses.</p>
-                        <a href="https://web-template-hub.netlify.app" target="_blank"
-                            class="text-sm text-emerald-400 font-medium hover:text-emerald-300 transition-colors flex items-center gap-2">
-                            View Live <i class="fas fa-external-link-alt text-xs"></i>
-                        </a>
                     </div>
 
                     <!-- Faizyab Al-Quran -->
@@ -614,25 +641,25 @@
                         </div>
                         <div class="glass-card p-6 rounded-xl" data-reveal>
                             <div class="flex items-center gap-3 mb-3">
-                                <i class="fas fa-tools text-indigo-400"></i>
-                                <h4 class="font-semibold text-lg">MyPage Builder</h4>
+                                <i class="fas fa-bolt text-orange-400"></i>
+                                <h4 class="font-semibold text-lg">ProdSpark</h4>
                             </div>
-                            <p class="text-sm text-zinc-400 mb-4">Modern link-in-bio and portfolio
-                                builder SaaS.</p>
-                            <a href="https://mypage-builder.vercel.app/" target="_blank"
-                                class="text-xs text-indigo-400 hover:text-indigo-300 transition-colors flex items-center gap-1">
+                            <p class="text-sm text-zinc-400 mb-4">Directory platform for discovering
+                                innovative tools and products.</p>
+                            <a href="https://prodspark.vercel.app/" target="_blank"
+                                class="text-xs text-orange-400 hover:text-orange-300 transition-colors flex items-center gap-1">
                                 View Live <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
                         <div class="glass-card p-6 rounded-xl" data-reveal>
                             <div class="flex items-center gap-3 mb-3">
-                                <i class="fas fa-robot text-purple-400"></i>
-                                <h4 class="font-semibold text-lg">Readme AI</h4>
+                                <i class="fas fa-brain text-indigo-400"></i>
+                                <h4 class="font-semibold text-lg">QuizSpark</h4>
                             </div>
-                            <p class="text-sm text-zinc-400 mb-4">AI-powered README generator for
-                                documentation.</p>
-                            <a href="https://readme-builder-ai.floot.app/" target="_blank"
-                                class="text-xs text-purple-400 hover:text-purple-300 transition-colors flex items-center gap-1">
+                            <p class="text-sm text-zinc-400 mb-4">AI-powered platform for creating,
+                                customizing, and analyzing interactive quizzes.</p>
+                            <a href="https://quiz-spark-ai.base44.app/" target="_blank"
+                                class="text-xs text-indigo-400 hover:text-indigo-300 transition-colors flex items-center gap-1">
                                 View Live <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
@@ -1063,9 +1090,19 @@
                             class="glass-card w-12 h-12 rounded-lg flex items-center justify-center hover:bg-zinc-800 transition-colors">
                             <i class="fab fa-linkedin text-xl"></i>
                         </a>
+                        <a href="https://instagram.com/syedfaizyabhussain07" target="_blank"
+                            aria-label="Instagram Profile"
+                            class="glass-card w-12 h-12 rounded-lg flex items-center justify-center hover:bg-zinc-800 transition-colors">
+                            <i class="fab fa-instagram text-xl"></i>
+                        </a>
                         <a href="https://x.com/FaizyabHus74391" target="_blank" aria-label="X (Twitter) Profile"
                             class="glass-card w-12 h-12 rounded-lg flex items-center justify-center hover:bg-zinc-800 transition-colors">
                             <i class="fab fa-x-twitter text-xl"></i>
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61577279337895" target="_blank"
+                            aria-label="Facebook Profile"
+                            class="glass-card w-12 h-12 rounded-lg flex items-center justify-center hover:bg-zinc-800 transition-colors">
+                            <i class="fab fa-facebook-f text-xl"></i>
                         </a>
                     </div>
                 </div>
