--- a/resume.html
+++ b/resume.html
@@ -7,22 +7,29 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Resume | Faizyab Hussain - Full Stack Developer</title>
+    <title>Resume | Faizyab Hussain - Full-Stack Solutions Architect</title>
     <meta name="description"
-        content="Professional resume of Faizyab Hussain, a Full-Stack Developer specializing in modern web interfaces and AI tools.">
-    <meta name="keywords" content="Resume, Faizyab Hussain, Full-Stack Developer, Tech Skills, Experience">
+        content="Professional resume of Faizyab Hussain, documenting expertise in Full-Stack Development, AI integrations, and scalable web architectures.">
+    <meta name="keywords"
+        content="Resume, Faizyab Hussain, Full-Stack Developer, AI Architect, Tech Skills, Experience, Karachi, Pakistan">
 
     <!-- OpenGraph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://faizyab-hussain.vercel.app/resume.html">
-    <meta property="og:title" content="Resume | Faizyab Hussain">
-    <meta property="og:description" content="Check out the professional journey and skills of Faizyab Hussain.">
-    <meta property="og:image" content="https://faizyab-hussain.vercel.app/favicon.png">
+    <meta property="og:site_name" content="Faizyab Hussain Resume">
+    <meta property="og:title" content="Resume | Faizyab Hussain - Full-Stack Developer">
+    <meta property="og:description"
+        content="Explore the professional experience, skills, and projects of Faizyab Hussain, a specialized Full-Stack AI Developer.">
+    <meta property="og:image" content="https://faizyab-hussain.vercel.app/banner-faizyabime.PNG">
+    <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="Resume | Faizyab Hussain">
-    <meta property="twitter:description" content="Full-Stack Developer Resume.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Resume | Faizyab Hussain">
+    <meta name="twitter:description" content="Full-Stack Developer Resume - Specialized in AI & Scalable Web Apps.">
+    <meta name="twitter:image" content="https://faizyab-hussain.vercel.app/banner-faizyabime.PNG">
+    <meta name="twitter:site" content="@FaizyabHus74391">
+    <meta name="twitter:creator" content="@FaizyabHus74391">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -410,6 +417,13 @@
             <li>Achieved a Lighthouse performance score of 95+ and focused on accessibility.</li>
         </ul>
 
+        <p><strong>ProdSpark</strong> | <em>Product Directory Platform</em></p>
+        <ul>
+            <li>Developed a comprehensive platform for discovering, submitting, and reviewing innovative tools and
+                products.</li>
+            <li>Integrated a curated directory system with rating and search functionality.</li>
+        </ul>
+
         <p><strong>Faizyab Al-Quran</strong> | <em>LMS Application</em></p>
         <ul>
             <li>Developed a modern LMS for Quranic studies with interactive learning modules.</li>
@@ -525,6 +539,15 @@
                                     and UI components. Built with semantic HTML, Tailwind CSS, and optimized for
                                     performance.
                                     <a href="https://web-template-hub.netlify.app"
+                                        class="text-indigo-400 no-underline hover:text-indigo-300">View Project</a>
+                                </p>
+                            </article>
+                            <article class="exp-item">
+                                <h3>ProdSpark</h3>
+                                <div class="company">Product Directory Platform</div>
+                                <p class="desc">A comprehensive platform to discover the best tools and products.
+                                    Browse, submit, rate, and review innovative tools in a curated directory.
+                                    <a href="https://prodspark.vercel.app/"
                                         class="text-indigo-400 no-underline hover:text-indigo-300">View Project</a>
                                 </p>
                             </article>
